created territories dimension

--- a/models/staging/sap/sources.yml
+++ b/models/staging/sap/sources.yml
@@ -25,13 +25,25 @@ sources:
             description: >
               Flag that identifies if the product is manufactured by Adventure Work or purchased.
               0 = Product is purchased, 1 = Product is manufactured in-house.
+            tests:
+              - accepted_values:
+                  values:
+                    - 'true'
+                    - 'false'
+                  quote: false
 
           - name: FINISHEDGOODSFLAG
             description: >
               Flag that identifies if the product will be sold by Adventure Work 
               or will be used in production of other products.
               0 = Product is not a salable item. 1 = Product is salable.
-
+            tests:
+              - accepted_values:
+                  values:
+                    - 'true'
+                    - 'false'
+                  quote: false
+                  
           - name: COLOR
             description: Color of the product
           - name: SAFETYSTOCKLEVEL
@@ -158,8 +170,9 @@ sources:
             tests:
               - accepted_values:
                   values:
-                    - TRUE
-                    - FALSE
+                    - 'true'
+                    - 'false'
+                  quote: false
           - name: NAME
             description: State or province description.
           - name: TERRITORYID
