--- a/models/marts/commercial/fct_sales.yml
+++ b/models/marts/commercial/fct_sales.yml
@@ -51,19 +51,13 @@ models:
       - name: QUANTITY
         description: Quantity ordered per product.
 
-      - name: TOTAL_SOLD
+      - name: GROSS_SALES
         description: Per product subtotal. Computed as unit_price * quantity.
 
-      - name: NET_TOTAL_SOLD
+      - name: NET_SALES
         description: Per product subtotal. Computed as unit_price * (1 - discount) * quantity.
 
-      - name: PRORATED_FREIGHT
-        description: Shipping cost prorated by order line. 
-
-      - name: PRORATED_TAXES
-        description: Tax amount prorated by oreder line.
-
-      - name: SALES_TAXES_FREIGHT
+      - name: TOTAL_SALES
         description: >
          Total due from customer.
          Computed as net_total_sold + prorated_taxes + prorated_freight.
@@ -72,8 +66,6 @@ models:
         description: >
           Mean value made in a purchase.
           Calculated as sum of net_total_sold divided by number of lines in an order.
-
-      - name: EXPECTED_LEAD_TIME
-        description: >
-          Time in days from creation of the sales order and the delivery of the product.
-          Calculated as the difference in days from (dt_order - dt_due).
+      
+      - name: DISCOUNT_CATEGORY
+        description: Categorization of how much discount the order had.
